--- a/progress_02_15_2022/Ruby/Minesweeper/lib/game.yml
+++ b/progress_02_15_2022/Ruby/Minesweeper/lib/game.yml
@@ -15,7 +15,7 @@ board: !ruby/object:Board
     - &9 !ruby/object:Tile
       bomb: true
       adjacent_bombs: 0
-      user_flagged: false
+      user_flagged: true
       explored: false
     - &13 !ruby/object:Tile
       bomb: false
@@ -125,7 +125,7 @@ board: !ruby/object:Board
     - &3 !ruby/object:Tile
       bomb: true
       adjacent_bombs: 0
-      user_flagged: false
+      user_flagged: true
       explored: false
     - &34 !ruby/object:Tile
       bomb: false
@@ -155,23 +155,23 @@ board: !ruby/object:Board
     - &7 !ruby/object:Tile
       bomb: true
       adjacent_bombs: 1
-      user_flagged: false
+      user_flagged: true
       explored: false
     - &39 !ruby/object:Tile
       bomb: false
       adjacent_bombs: 2
       user_flagged: false
-      explored: false
+      explored: true
     - &40 !ruby/object:Tile
       bomb: false
       adjacent_bombs: 2
       user_flagged: false
-      explored: false
+      explored: true
     - &41 !ruby/object:Tile
       bomb: false
       adjacent_bombs: 2
       user_flagged: false
-      explored: false
+      explored: true
     - &42 !ruby/object:Tile
       bomb: false
       adjacent_bombs: 2
@@ -211,7 +211,7 @@ board: !ruby/object:Board
       bomb: false
       adjacent_bombs: 2
       user_flagged: false
-      explored: false
+      explored: true
     - &1 !ruby/object:Tile
       bomb: true
       adjacent_bombs: 1
@@ -236,17 +236,17 @@ board: !ruby/object:Board
       bomb: false
       adjacent_bombs: 2
       user_flagged: false
-      explored: false
+      explored: true
     - &52 !ruby/object:Tile
       bomb: false
       adjacent_bombs: 3
       user_flagged: false
-      explored: false
+      explored: true
     - &53 !ruby/object:Tile
       bomb: false
       adjacent_bombs: 3
       user_flagged: false
-      explored: false
+      explored: true
     - &54 !ruby/object:Tile
       bomb: false
       adjacent_bombs: 2
@@ -256,7 +256,7 @@ board: !ruby/object:Board
       bomb: false
       adjacent_bombs: 2
       user_flagged: false
-      explored: false
+      explored: true
     - &8 !ruby/object:Tile
       bomb: true
       adjacent_bombs: 1
@@ -276,21 +276,21 @@ board: !ruby/object:Board
       bomb: false
       adjacent_bombs: 1
       user_flagged: false
-      explored: false
+      explored: true
     - &59 !ruby/object:Tile
       bomb: false
       adjacent_bombs: 2
       user_flagged: false
-      explored: false
+      explored: true
     - &2 !ruby/object:Tile
       bomb: true
       adjacent_bombs: 1
-      user_flagged: false
+      user_flagged: true
       explored: false
     - &5 !ruby/object:Tile
       bomb: true
       adjacent_bombs: 1
-      user_flagged: false
+      user_flagged: true
       explored: false
     - &60 !ruby/object:Tile
       bomb: false
@@ -321,17 +321,17 @@ board: !ruby/object:Board
       bomb: false
       adjacent_bombs: 0
       user_flagged: false
-      explored: false
+      explored: true
     - &66 !ruby/object:Tile
       bomb: false
       adjacent_bombs: 2
       user_flagged: false
-      explored: false
+      explored: true
     - &67 !ruby/object:Tile
       bomb: false
       adjacent_bombs: 3
       user_flagged: false
-      explored: false
+      explored: true
     - &68 !ruby/object:Tile
       bomb: false
       adjacent_bombs: 3
@@ -365,17 +365,17 @@ board: !ruby/object:Board
   - - &74 !ruby/object:Tile
       bomb: false
       adjacent_bombs: 0
-      user_flagged: false
-      explored: false
+      user_flagged: true
+      explored: true
     - &75 !ruby/object:Tile
       bomb: false
       adjacent_bombs: 1
       user_flagged: false
-      explored: false
+      explored: true
     - &4 !ruby/object:Tile
       bomb: true
       adjacent_bombs: 0
-      user_flagged: false
+      user_flagged: true
       explored: false
     - &76 !ruby/object:Tile
       bomb: false
@@ -655,6 +655,24 @@ board: !ruby/object:Board
       : true
       ? - 4
         - 2
+      : true
+      ? - 7
+        - 0
+      : true
+      ? - 6
+        - 0
+      : true
+      ? - 6
+        - 1
+      : true
+      ? - 7
+        - 1
+      : true
+      ? - 8
+        - 0
+      : true
+      ? - 8
+        - 1
       : true
 bomb_hit: false
 solved: false
